[package]
name = "geo_json_multiblock_merger"
version = "0.1.0"
edition = "2021"
authors = ["dcsmf"]
description = "A program that converts GeometryCollection to echarts-recognizable MultiPolygon when multiple areas are present in a single Feature of a GeoJSON file."

[dependencies]
serde_json = "1.0"
geojson = "0.24.1"
anyhow = "1.0"
rfd = "0.15.1"
inquire = "0.7.5"
rust-i18n = "3"

[profile.release]
# 优化级别为z
opt-level = 'z'
# 移除调试符号
strip = true
# 在链接阶段进行优化，移除未使用的代码
lto = true
# 减少并行代码生成单元数量
codegen-units = 1